[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/StarterZone.gd" type="Script" id=1]
[ext_resource path="res://scenes/CombatUI.tscn" type="PackedScene" id=2]

[node name="StarterZone" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MessageLabel" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -300.0
margin_top = -50.0
margin_right = 300.0
margin_bottom = 50.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Message text here"
align = 1
valign = 1
autowrap = true

[node name="PromptLabel" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.85
margin_left = -200.0
margin_top = -20.0
margin_right = 200.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.9, 0.9, 0.5, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Press SPACE to interact"
align = 1
valign = 1

[node name="CombatUI" parent="." instance=ExtResource( 2 )]
